{
  "version": 4,
  "terraform_version": "0.12.15",
  "serial": 4119,
  "lineage": "54c07f12-89ca-d5fa-52ed-95d642edb103",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "bespin-network-acl-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-01413bf38bec6e262",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01413bf38bec6e262",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "779475221336",
            "subnet_ids": [
              "subnet-01e535bf6aed95223",
              "subnet-0c36ad9ea36630401"
            ],
            "tags": {
              "Name": "bespin-network-acl-public"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_subnet.bespin-subnet-public-a",
            "aws_subnet.bespin-subnet-public-c",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bespin-public-a-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08b3c42abf5b9fa6f",
            "domain": "vpc",
            "id": "eipalloc-035469bcb18c015b6",
            "instance": "i-0b6cf0e724b577169",
            "network_interface": "eni-026c7f85be679c748",
            "private_dns": "ip-10-0-1-10.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-15-165-175-202.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.175.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bespin-ec2-web-a",
            "aws_network_interface.bespin-public-a-eni",
            "aws_security_group.bespin-sg",
            "aws_subnet.bespin-subnet-public-a",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bespin-ec2-web-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bea7fd38fabe821a",
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:instance/i-0b6cf0e724b577169",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b6cf0e724b577169",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-026c7f85be679c748"
              }
            ],
            "primary_network_interface_id": "eni-026c7f85be679c748",
            "private_dns": "ip-10-0-1-10.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01519499ed88dda6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e535bf6aed95223",
            "tags": {
              "Name": "bespin-ec2-web-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d1dc780bc407035"
            ]
          },
          "dependencies": [
            "aws_network_interface.bespin-public-a-eni",
            "aws_security_group.bespin-sg",
            "aws_subnet.bespin-subnet-public-a",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bespin-igt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01af5e0d5673dd66f",
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-igt"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bespin-network-acl-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0a8d1e827f2743c2c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "779475221336",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-06229ab7d9ea0ae2c",
              "subnet-0b66ce5ff21ccec5b"
            ],
            "tags": {
              "Name": "bespin-network-acl-private"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_subnet.bespin-subnet-private-a",
            "aws_subnet.bespin-subnet-private-c",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bespin-network-acl-private-DB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.3.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.4.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-02f2a93b0529e5a44",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.3.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.4.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "779475221336",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0869002215e4db644",
              "subnet-0cec777dd16c98dd6"
            ],
            "tags": {
              "Name": "bespin-network-acl-private-DB"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_subnet.bespin-subnet-private-DBa",
            "aws_subnet.bespin-subnet-private-DBc",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bespin-public-a-eni",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-026c7f85be679c748",
            "mac_address": "02:82:1e:43:7c:f4",
            "private_ip": "10.0.1.10",
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01d1dc780bc407035"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e535bf6aed95223",
            "tags": {
              "Name": "bespin-Public-a-ENI"
            }
          },
          "dependencies": [
            "aws_security_group.bespin-sg",
            "aws_subnet.bespin-subnet-public-a",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bespin-route-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01af5e0d5673dd66f",
            "id": "r-rtb-0c47aaa21d6300b591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c47aaa21d6300b59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.bespin-igt",
            "aws_route_table.bespin-route-table-public",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bespin-route-table-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e9088bf3b50da163",
            "owner_id": "779475221336",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bespin-private-subnet"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bespin-route-table-private-DB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0af05b9a72b2b290c",
            "owner_id": "779475221336",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bespin-private-DB-subnet"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bespin-route-table-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c47aaa21d6300b59",
            "owner_id": "779475221336",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bespin-public-subnet"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bespin-subnet-private-DBa-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c700e6fd012387c",
            "route_table_id": "rtb-0af05b9a72b2b290c",
            "subnet_id": "subnet-0869002215e4db644"
          },
          "dependencies": [
            "aws_route_table.bespin-route-table-private-DB",
            "aws_subnet.bespin-subnet-private-DBa",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bespin-subnet-private-DBc-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088944c18b2a3e87a",
            "route_table_id": "rtb-0af05b9a72b2b290c",
            "subnet_id": "subnet-0cec777dd16c98dd6"
          },
          "dependencies": [
            "aws_route_table.bespin-route-table-private-DB",
            "aws_subnet.bespin-subnet-private-DBc",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bespin-subnet-private-a-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ce7360750f0cbd8",
            "route_table_id": "rtb-0e9088bf3b50da163",
            "subnet_id": "subnet-0b66ce5ff21ccec5b"
          },
          "dependencies": [
            "aws_route_table.bespin-route-table-private",
            "aws_subnet.bespin-subnet-private-a",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bespin-subnet-private-c-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043288605fa6dd16d",
            "route_table_id": "rtb-0e9088bf3b50da163",
            "subnet_id": "subnet-06229ab7d9ea0ae2c"
          },
          "dependencies": [
            "aws_route_table.bespin-route-table-private",
            "aws_subnet.bespin-subnet-private-c",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bespin-subnet-public-a-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080d1d9512fc44371",
            "route_table_id": "rtb-0c47aaa21d6300b59",
            "subnet_id": "subnet-01e535bf6aed95223"
          },
          "dependencies": [
            "aws_route_table.bespin-route-table-public",
            "aws_subnet.bespin-subnet-public-a",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bespin-subnet-public-c-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaea3b25cbd054e1",
            "route_table_id": "rtb-0c47aaa21d6300b59",
            "subnet_id": "subnet-0c36ad9ea36630401"
          },
          "dependencies": [
            "aws_route_table.bespin-route-table-public",
            "aws_subnet.bespin-subnet-public-c",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bespin-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:security-group/sg-01d1dc780bc407035",
            "description": "bespin-sg",
            "egress": [],
            "id": "sg-01d1dc780bc407035",
            "ingress": [],
            "name": "bespin-sg",
            "name_prefix": null,
            "owner_id": "779475221336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bespin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bespin-sg-rule-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2737133869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01d1dc780bc407035",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bespin-sg",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bespin-sg-rule-outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2751806930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01d1dc780bc407035",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.bespin-sg",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bespin-sg-rule-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-363791512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01d1dc780bc407035",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bespin-sg",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bespin-sg-rule-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3349141729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01d1dc780bc407035",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bespin-sg",
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bespin-subnet-private-DBa",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:subnet/subnet-0869002215e4db644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0869002215e4db644",
            "map_public_ip_on_launch": false,
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-subnet-private-DBa"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bespin-subnet-private-DBc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:subnet/subnet-0cec777dd16c98dd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0cec777dd16c98dd6",
            "map_public_ip_on_launch": false,
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-subnet-private-DBc"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bespin-subnet-private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:subnet/subnet-0b66ce5ff21ccec5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b66ce5ff21ccec5b",
            "map_public_ip_on_launch": false,
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-subnet-private-a"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bespin-subnet-private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:subnet/subnet-06229ab7d9ea0ae2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06229ab7d9ea0ae2c",
            "map_public_ip_on_launch": false,
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-subnet-private-c"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bespin-subnet-public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:subnet/subnet-01e535bf6aed95223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01e535bf6aed95223",
            "map_public_ip_on_launch": false,
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-subnet-public-a"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bespin-subnet-public-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:subnet/subnet-0c36ad9ea36630401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c36ad9ea36630401",
            "map_public_ip_on_launch": false,
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-subnet-public-c"
            },
            "vpc_id": "vpc-01d154efee112c879"
          },
          "dependencies": [
            "aws_vpc.bespin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bespin-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:779475221336:vpc/vpc-01d154efee112c879",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01413bf38bec6e262",
            "default_route_table_id": "rtb-01e873559959f8305",
            "default_security_group_id": "sg-0e49b466ca9fdeaa3",
            "dhcp_options_id": "dopt-50f54e3b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01d154efee112c879",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e873559959f8305",
            "owner_id": "779475221336",
            "tags": {
              "Name": "bespin-vpc"
            }
          }
        }
      ]
    }
  ]
}